@@ -1,3 +1,4 @@
+- Add .WithLabels() as alternative to .Labels() for fewer annoying Intellisense conflicts.
 * 2.0.0
 - Targeting .NET Standard 2.0 as minimum version (.NET Framework 4.6.1, .NET Core 2.0 and Mono 5.4)
 - Added ASP.NET Core middlware
